# RAG-PDF-Chatbot

./: .gitignore  README.md  app.py  preprocessing.py  pyproject.toml  vectorstore.py
chroma_langchain_db/: chroma.sqlite3
