[project]
name = "rag-pdf-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]
